update gh actions

--- a/.github/workflows/draft_release.yaml
+++ b/.github/workflows/draft_release.yaml
@@ -13,7 +13,7 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/workflows/test_and_build.yaml
+      - uses: eladleev/KeyToField-smt/.github/workflows/test_and_build.yaml@main
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
