--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,4 +13,4 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/workflows/test_and_build.yaml
+      - uses: eladleev/KeyToField-smt/.github/workflows/test_and_build.yaml@main
