--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,5 +12,21 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
       - uses: actions/checkout@v4
-      - uses: eladleev/KeyToField-smt/.github/workflows/test_and_build.yaml@main
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: "zulu"
+          java-version: "8"
+          cache: maven
+
+      - name: Maven Set Version
+        run: mvn versions:set -DnewVersion=${{ steps.get_version.outputs.VERSION }} -B --file pom.xml
+
+      - name: Run the Maven verify phase
+        run: mvn --batch-mode --update-snapshots verify
